--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-
 @import url("nav-hero.css");
+@import url("video.css");
+@import url("expertise.css");
 
 * {
   margin: 0;
@@ -7,9 +8,8 @@
   box-sizing: border-box;
 }
 
-
 .footer {
-  background-image: url('./photoshop/design-assets/bgk-footer.png');
+  background-image: url("./photoshop/design-assets/bgk-footer.png");
   color: white;
   background-size: cover;
 }
@@ -19,32 +19,26 @@
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: start;
   column-gap: 1rem;
-  row-gap: 3rem
-  ;
+  row-gap: 3rem;
   padding: 5rem 10rem;
-  
 }
 
 .foot-nav {
-  grid-column: 1/span 1;
-  
+  grid-column: 1 / span 1;
 }
 .foot-nav-list {
   display: flex;
   justify-content: space-between;
- 
- 
 }
-.foot-nav-list a{
+.foot-nav-list a {
   text-decoration: none;
-  color: white; 
+  color: white;
 }
 .foot-nav-list a:hover {
   text-decoration: underline;
- 
 }
 
-.foot-nav-list li{
+.foot-nav-list li {
   list-style-type: none;
 }
 .foot-addr {
@@ -53,7 +47,6 @@
 }
 .foot-addr:hover {
   text-decoration: underline;
-  
 }
 .copyright {
   grid-column: 3/4;
