--- a/style.css
+++ b/style.css
@@ -67,10 +67,20 @@ padding:5px;
 
 /*--Second part CSS end*/
 
+/* Footer  */
 .footer {
   background-image: url("./photoshop/design-assets/bgk-footer.png");
   color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: lighter;
+  font-size: 1rem;
+  width: 1200px;
+
+  margin: 0 auto;
   background-size: cover;
+
+
+
 }
 
 .footer-sec {
@@ -79,7 +89,20 @@ padding:5px;
   justify-content: start;
   column-gap: 1rem;
   row-gap: 3rem;
-  padding: 5rem 10rem;
+  padding: 2em 10em;
+  align-items: center;
+
+}
+
+.foot-sec__logo{
+  display: flex; 
+  text-align: center;
+  gap: 1rem;
+}
+
+.foot-sec__logo p {
+  font-size: 2rem;
+  color: rgb(17, 225, 249);
 }
 
 .foot-nav {
@@ -88,17 +111,22 @@ padding:5px;
 .foot-nav-list {
   display: flex;
   justify-content: space-between;
+  gap: 1rem;
 }
 .foot-nav-list a {
   text-decoration: none;
   color: white;
 }
-.foot-nav-list a:hover {
-  text-decoration: underline;
+.foot-nav-list img:hover {
+  opacity: 0.2;
 }
 
 .foot-nav-list li {
   list-style-type: none;
+}
+
+.foot-nav-list a:hover {
+  text-decoration: underline;
 }
 .foot-addr {
   text-decoration: none;
@@ -109,4 +137,45 @@ padding:5px;
 }
 .copyright {
   grid-column: 3/4;
+}
+
+.subscribe {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+
+#subscribe-input {
+  background-color: transparent;
+  padding: .5rem 1.5rem;
+  border: 1px solid rgb(190, 182, 182);
+  color: white;
+}
+
+#subscribe-button {
+  background-color: rgb(190, 182, 182);
+  border: 1px solid rgb(190, 182, 182);
+  padding: 0.5rem 1.5rem;
+}
+#subscribe-button:hover {
+  border: 1px solid black;
+}
+
+@media only screen and (max-width: 900px){
+  .footer-sec-3{
+    grid-column: 1/2;
+    
+  }
+  .footer-sec-5{
+    grid-column: 2/3;
+ 
+  }
+} 
+@media only screen and (max-width: 600px){
+  .footer-sec-2{
+    grid-column: 1/2;
+  }
+  .footer-sec-5{
+    grid-column: 1/2;
+  }
 }
