--- a/style.css
+++ b/style.css
@@ -75,12 +75,8 @@ padding:5px;
   font-weight: lighter;
   font-size: 1rem;
   width: 1200px;
-
-  margin: 0 auto;
+  margin: 3rem;
   background-size: cover;
-
-
-
 }
 
 .footer-sec {
@@ -161,10 +157,10 @@ padding:5px;
   border: 1px solid black;
 }
 
+
 @media only screen and (max-width: 900px){
   .footer-sec-3{
     grid-column: 1/2;
-    
   }
   .footer-sec-5{
     grid-column: 2/3;
@@ -178,4 +174,70 @@ padding:5px;
   .footer-sec-5{
     grid-column: 1/2;
   }
+}
+
+/* Team Section */
+
+.team-section {
+  background-image: url("./photoshop/design-assets/bgk-header.png");
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: lighter;
+  font-size: 1rem;
+  max-width: 1200px;
+  margin: 3rem;
+  background-size: cover;
+  text-align: center;
+  padding: 3rem 10rem;
+}
+.capital, .team-members {
+  text-transform: uppercase;
+}
+
+#team-button {
+  padding: .6rem 2rem;
+  font-weight: bold;
+  color: rgb(17, 225, 249);
+  border: 1px solid;
+  background-color: transparent;
+  margin: 2rem;
+  display: inline-block;
+  text-decoration: none;
+ 
+}
+
+#team-button:hover {
+  opacity: .5;
+}
+
+
+.team-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+  margin: 2rem 0;
+}
+
+
+.team-members {
+  border: 1px solid white;
+  width: 200px;
+  height: 300px;
+}
+
+.team-members:hover {
+  opacity: 0.8;
+}
+.team-members img{
+  border: 1px solid white;
+  width: 100%;
+  background-color: white;
+  height: 200px;
+
+ 
+}
+
+.team-members-content{
+  padding: 1rem;
 }
