--- a/style.css
+++ b/style.css
@@ -67,27 +67,114 @@ padding:5px;
 
 /*--Second part CSS end*/
 
-/* Footer  */
-.footer {
-  background-image: url("./photoshop/design-assets/bgk-footer.png");
+/* Team Section */
+.team-section {
+  background-image: url("./photoshop/design-assets/bgk-header.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 2rem 4rem;
   color: white;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: lighter;
   font-size: 1rem;
-  width: 1200px;
-  margin: 3rem;
-  background-size: cover;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem 4rem; 
+  text-align: center;
+}
+.capital, .team-members {
+  text-transform: uppercase;
 }
 
-.footer-sec {
+#team-button {
+  padding: .6rem 2rem;
+  font-weight: bold;
+  color: rgb(17, 225, 249);
+  border: 1px solid;
+  background-color: transparent;
+  margin: 2rem;
+  display: inline-block;
+  text-decoration: none;
+}
+
+#team-button:hover {
+  opacity: .5;
+}
+
+.team-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+  margin: 2rem 0;
+}
+
+
+.team-members {
+  border: 1px solid rgb(186, 178, 178);
+  width: 200px;
+  height: 300px;
+}
+.team-members p{
+  color: rgb(186, 178, 178);
+}
+
+.team-members:hover {
+  opacity: 0.8;
+}
+.team-members img{
+  border: 1px solid white;
+  width: 100%;
+  background-color: white;
+  height: 200px;
+}
+
+.team-members-content{
+  padding: 1rem;
+}
+
+/* Footer  */
+.footer {
+  background-image: url("./photoshop/design-assets/bgk-footer.png");
+  background-position: center;
+  background-size: cover;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: lighter;
+  font-size: 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  justify-content: start;
-  column-gap: 1rem;
-  row-gap: 3rem;
-  padding: 2em 10em;
-  align-items: center;
+  grid-template-rows: 2fr 0.4fr;
+  grid-template-areas: 
+  'logo studio touch'
+  'contact . copyright';
+  justify-content: center;
+  align-items: start;
+  gap: 1rem;
+  padding: 2rem 4rem; 
+}
 
+.footer-sec-1 {
+  grid-area: logo;
+}
+
+.footer-sec-2 {
+  grid-area: studio;
+}
+
+.footer-sec-3 {
+  grid-area: touch;
+}
+
+.footer-sec-4 {
+  grid-area: contact;
+}
+.footer-sec-5 {
+  grid-area: copyright;
+  text-align: center;
 }
 
 .foot-sec__logo{
@@ -95,14 +182,9 @@ padding:5px;
   text-align: center;
   gap: 1rem;
 }
-
 .foot-sec__logo p {
   font-size: 2rem;
   color: rgb(17, 225, 249);
-}
-
-.foot-nav {
-  grid-column: 1 / span 1;
 }
 .foot-nav-list {
   display: flex;
@@ -124,6 +206,7 @@ padding:5px;
 .foot-nav-list a:hover {
   text-decoration: underline;
 }
+
 .foot-addr {
   text-decoration: none;
   color: white;
@@ -131,14 +214,11 @@ padding:5px;
 .foot-addr:hover {
   text-decoration: underline;
 }
-.copyright {
-  grid-column: 3/4;
-}
 
 .subscribe {
   display: flex;
   gap: 1rem;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 #subscribe-input {
@@ -157,87 +237,34 @@ padding:5px;
   border: 1px solid black;
 }
 
+@media only screen and (max-width: 900px) {
+  .footer{
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.3fr 1fr 0.2fr;
+    grid-template-areas: 
+    'logo studio'
+    'touch contact'
+    'copyright .';
 
-@media only screen and (max-width: 900px){
-  .footer-sec-3{
-    grid-column: 1/2;
   }
-  .footer-sec-5{
-    grid-column: 2/3;
- 
+  .foot-nav-list {
+    justify-content: flex-start;
   }
-} 
-@media only screen and (max-width: 600px){
-  .footer-sec-2{
-    grid-column: 1/2;
-  }
-  .footer-sec-5{
-    grid-column: 1/2;
+  .copyright {
+    text-align: left;
   }
 }
 
-/* Team Section */
-
-.team-section {
-  background-image: url("./photoshop/design-assets/bgk-header.png");
-  color: white;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: lighter;
-  font-size: 1rem;
-  max-width: 1200px;
-  margin: 3rem;
-  background-size: cover;
-  text-align: center;
-  padding: 3rem 10rem;
-}
-.capital, .team-members {
-  text-transform: uppercase;
+@media only screen and (max-width: 600px) {
+  .footer {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 0.2fr 0.1fr;
+    grid-template-areas: 
+    'logo'
+    'studio'
+    'touch'
+    'contact'
+    'copyright';
+  }
 }
 
-#team-button {
-  padding: .6rem 2rem;
-  font-weight: bold;
-  color: rgb(17, 225, 249);
-  border: 1px solid;
-  background-color: transparent;
-  margin: 2rem;
-  display: inline-block;
-  text-decoration: none;
- 
-}
-
-#team-button:hover {
-  opacity: .5;
-}
-
-
-.team-container {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-  flex-wrap: wrap;
-  margin: 2rem 0;
-}
-
-
-.team-members {
-  border: 1px solid white;
-  width: 200px;
-  height: 300px;
-}
-
-.team-members:hover {
-  opacity: 0.8;
-}
-.team-members img{
-  border: 1px solid white;
-  width: 100%;
-  background-color: white;
-  height: 200px;
-
- 
-}
-
-.team-members-content{
-  padding: 1rem;
-}
