--- a/video.css
+++ b/video.css
@@ -4,6 +4,25 @@
   box-sizing: border-box;
 }
 
+@media only screen and (max-width: 480px) and (min-width: 300px) {
+  .video {
+    height: 350px;
+  }
+
+  .video p {
+    color: aqua;
+    letter-spacing: 1rem;
+    font-size: 20px;
+    text-transform: uppercase;
+    padding-top: 3rem;
+    width: 500px;
+    /* border: 2px solid orange; */
+  }
+  .play-btn-container img {
+    width: 150px;
+  }
+}
+
 .video {
   display: flex;
   flex-direction: column;
@@ -13,6 +32,11 @@
   width: 1200px;
   justify-content: center;
   align-items: center;
+}
+
+.video .play-btn-container,
+.video-text {
+  padding-bottom: 5rem;
 }
 
 .play-btn-container {
@@ -28,7 +52,7 @@
   align-items: center;
 }
 
-.video p {
+.video-text {
   text-align: center;
   position: absolute;
   margin-top: 12rem;
