--- a/expertise.css
+++ b/expertise.css
@@ -1,21 +1,22 @@
 /*Expertise section*/
 
 /*Start of Media Query for mobile*/
-@media only screen and (max-width: 480px) and (min-width: 300px) {
+/* @media only screen and (max-width: 480px) {
   .expertise-container .expertise-grid {
     display: block;
     margin: auto;
-    height: 1650px;
+
+    /* height: 1650px; 
   }
 
   .expertise-title-container .expertise-title,
   .grid-text {
     text-align: center;
-    /* border: 1px solid red; */
+    /* border: 1px solid red; 
   }
 
   .expertise-container {
-    max-width: 1200px;
+   
   }
 
   .expertise-title-container {
@@ -50,17 +51,17 @@
 
 /*Start of Media Query for tablet*/
 
-@media only screen and (max-width: 768px) and (min-width: 481px) {
+/* @media only screen and (max-width: 768px) {
   .expertise-container {
-    height: 1400px;
+    /* height: 1400px; 
     margin: 1rem 0rem 1rem 0rem;
-  }
+  } 
   .expertise-container .expertise-grid {
     display: grid;
     margin: auto;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
-    width: 1200px;
+
     justify-items: center;
     align-items: center;
     border-color: #888;
@@ -72,7 +73,6 @@
   }
 
   .expertise-title-container {
-    width: 100%;
   }
 
   section.grid-img-1,
@@ -99,7 +99,7 @@
   }
 
   .grid-img-3 {
-    /* border: 2px solid violet; */
+    border: 2px solid violet;
     margin-bottom: 3rem;
   }
 
@@ -112,53 +112,67 @@
     height: 18rem;
     padding: 2.2rem 1rem 0 1rem;
   }
-}
+}*/
 
 /*End of Media Query for tablet*/
 
 /*Start of Media Query for desktop*/
+
 .expertise-grid {
   display: grid;
   grid-template-columns: 33.3% 33.3% 33.3%;
   grid-template-rows: 33.3% 33.3% 33.3%;
-  margin: auto;
-  max-width: 1200px;
-  justify-items: center;
+  margin: 0 auto;
+  justify-content: center;
   align-items: center;
-  height: 650px;
   border-color: #888;
-  padding: 0 5rem 0 5rem;
-  /* column-gap: 2rem; */
-  row-gap: 6rem;
   text-align: center;
+  max-width: 1200px;
 }
 
 .expertise-title {
   color: #444;
   text-transform: uppercase;
-  margin: 5rem 0 0.5rem 0;
-  font-family: serif;
-  max-width: 1200px;
   text-align: center;
-}
-
-.expertise-container {
-  max-width: 1200px;
+  margin: 3rem 0 1rem 0;
+  font-family: serif;
 }
 
 .expertise-text {
   color: #888;
-  margin: 1.1rem 0 1.3rem 0;
-  font-size: 20px;
+  font-size: 13px;
   letter-spacing: 0.05rem;
-  max-width: 1200px;
   text-align: center;
+  margin-bottom: 0.5rem;
+  font-family: serif;
+  /* padding: 2rem 2rem 2rem 2rem; */
+}
+
+.grid-heading .grid-h3 {
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  color: #333;
+  font-size: 13px;
+  padding: 1rem 0rem 0 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 0 2rem 0 2rem;
+}
+
+.grid-text .grid-p {
+  line-height: 1.6;
+  color: #aaaaaa;
+  font-size: 11px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 0 2rem 0 2rem;
 }
 
 .expertise-title-container hr {
   width: 5%;
   margin: auto;
-  margin-bottom: 4rem;
+  margin-bottom: 6rem;
+  margin-top: 1rem;
 }
 
 /* .t {
@@ -167,53 +181,67 @@
     max-width: 1200px;
 } */
 
-/*Experimenting with this. Not specific but currently works*/
+/*Experimenting with this. Not specific but currently works
 section svg:nth-child(1) {
   margin-bottom: 2rem;
-}
+}*/
 
-.grid-heading h3 {
-  font-family: sans-serif;
-  text-transform: uppercase;
-  margin-bottom: 1rem;
-  color: #333;
-  font-size: 18px;
-}
-
-.grid-text p {
-  font-family: sans-serif;
-  line-height: 1.6;
-  font-weight: lighter;
-  color: #666;
-  font-size: 17.5px;
-  /* margin-bottom: 4rem;  */
-}
-
-.grid-img-1,
-.grid-img-2 {
-  margin-top: 3rem;
-  padding: 2rem 2rem 0 1.5rem;
+.grid-img-1 {
   border-right: 0.5px solid rgb(221, 221, 221);
   border-bottom: 0.5px solid rgb(221, 221, 221);
-  height: 18rem;
+  grid-column: 1 /2;
+  grid-row: 1 /2;
+  margin-bottom: 3rem;
+}
+
+.grid-img-2 {
+  border-right: 0.5px solid rgb(221, 221, 221);
+  border-bottom: 0.5px solid rgb(221, 221, 221);
+  grid-column: 2 /3;
+  grid-row: 1 /2;
+  margin-bottom: 2.5rem;
 }
 
 .grid-img-3 {
-  margin-top: 3rem;
-  padding: 2rem 2rem 0 1.5rem;
   border-bottom: 0.5px solid rgb(221, 221, 221);
-  height: 18rem;
+  grid-column: 3 /4;
+  grid-row: 1 /2;
+  margin-bottom: 3rem;
 }
 
-.grid-img-4,
+.grid-img-4 {
+  border-right: 0.5px solid rgb(221, 221, 221);
+  grid-column: 1 /2;
+  grid-row: 2 /3;
+  padding-top: 4rem;
+}
+
 .grid-img-5 {
   border-right: 0.5px solid rgb(221, 221, 221);
-  height: 20.6rem;
-  padding: 3.5rem 1rem 0 1rem;
+  grid-column: 2 /3;
+  grid-row: 2 /3;
+  padding-top: 3rem;
 }
 
 .grid-img-6 {
-  height: 18rem;
-  padding: 2.2rem 1rem 0 1rem;
+  grid-column: 3 /4;
+  grid-row: 2 /3;
+  margin-top: 3rem;
+}
+
+.grid-img-1 p,
+.grid-img-2 p,
+.grid-img-3 p {
+  margin-bottom: 2rem;
+}
+
+.expertise-grid svg {
+  margin-bottom: 2rem;
+}
+
+.grid-img-4 p,
+.grid-img-5 p,
+.grid-img-6 p {
+  margin-bottom: -2rem;
 }
 /*End of Media Query for desktop*/
