--- a/nav-hero.css
+++ b/nav-hero.css
@@ -1,107 +1,41 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+/*Nav Css files start*/
 
 .hero {
+  background-image: url("./photoshop/design-assets/bgk-header.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin: 0 auto;
+  height: 750px;
+  max-width: 1200px;
+}
 
- background-image: url("./photoshop/design-assets/bgk-header.png");
-
-  height: 41em;
-  margin: auto;
-  width: 1200px;
-  padding: 0 6rem 0 6rem;
+.hero-text-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .hero-text-container,
-.hero-h1,
-.hero-text {
+.hero-h1 .hero-text {
   text-align: center;
   color: #fff;
-  margin-top: 0.9rem;
-  margin-bottom: 0.3rem;
-  display: block;
+  margin-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  /* border: 1px solid pink; */
 }
 
-#home {
-  color: aqua;
-}
-
-.logo,
-.tajam-logo {
-  margin-top: 1rem;
-}
-
-.tajam-logo {
-  /* font-family: "Krub", sans-serif; */
-  font-size: 30px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: lighter;
-  color: aqua;
-  padding-left: 1rem;
-  padding-top: 0.5rem;
-}
-
-.nav-container {
-  /* border: 3px solid yellow; */
-  display: flex;
-  flex-direction: row;
+.hero .hero-btn {
+  margin-top: 0.9rem;
+  margin-bottom: 0.3rem;
   justify-content: center;
-  gap: 20rem;
-}
-
-.nav-left {
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  /* border: 3px solid red; */
-}
-
-.nav-right {
-  justify-content: right;
-  align-items: right;
-  /* border-left: 3px solid purple;  */
-}
-
-.navbar {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  display: flex;
-  gap: 1.8em;
-  font-size: 12px;
-  font-weight: 400;
-  margin-bottom: 10rem;
-  text-transform: uppercase;
-  list-style-type: none;
-  justify-content: right;
-  margin-top: 2rem;
-}
-
-.navbar a {
-  list-style-type: none;
-  text-decoration: none;
-  color: #fff;
-}
-
-.hero-text {
-  font-family: sans-serif;
-  line-height: 1.8;
-  font-weight: lighter;
-}
-
-.divider {
-  width: 50px;
-  background-color: aqua;
-  height: 0.2px;
-  border: none;
-  margin: auto;
-}
-
-.hero-btn {
-  margin-top: 4rem;
+  align-items: center;
+  text-align: center;
+  margin: 3rem 0 15rem 0;
   background-color: transparent;
   box-shadow: none;
   outline: none;
@@ -111,3 +45,86 @@
   width: 8rem;
   letter-spacing: 0.02rem;
 }
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  /* border: 1px solid blue; */
+  flex-direction: row;
+}
+
+.nav-right {
+  margin-right: 4rem;
+}
+
+.nav-left {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  /* border: 1px solid red; */
+}
+
+.logo,
+.tajam-logo {
+  margin-top: 1rem;
+}
+
+.navbar {
+  display: flex;
+  gap: 1.8em;
+  font-size: 12px;
+  font-weight: 400;
+  margin-top: 2rem;
+  text-transform: uppercase;
+  list-style-type: none;
+  justify-content: right;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.navbar a {
+  list-style-type: none;
+  text-decoration: none;
+  color: #fff;
+}
+
+#home {
+  color: aqua;
+}
+
+.tajam-logo {
+  /* font-family: "Krub", sans-serif; */
+  font-size: 30px;
+  font-weight: lighter;
+  color: aqua;
+  margin-left: 3rem;
+  padding-right: 2rem;
+  padding-top: 0.5rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: lighter;
+}
+
+.logo {
+  margin-left: 2rem;
+  margin-right: -2.3rem;
+}
+
+.hero-text {
+  font-family: sans-serif;
+  line-height: 1.8;
+  font-weight: lighter;
+  padding: 0 5rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.hero-divider {
+  width: 50px;
+  background-color: aqua;
+  height: 0.2px;
+  border: none;
+  margin: auto;
+}
+
+/*Nav Css files end*/
