--- a/video.css
+++ b/video.css
@@ -1,12 +1,6 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-@media only screen and (max-width: 480px) and (min-width: 300px) {
+/* @media only screen and (max-width: 480px) {
   .video {
-    height: 350px;
+    /* height: 350px; 
   }
 
   .video p {
@@ -16,37 +10,27 @@
     text-transform: uppercase;
     padding-top: 3rem;
     width: 500px;
-    /* border: 2px solid orange; */
+    /* border: 2px solid orange; 
   }
   .play-btn-container img {
-    width: 150px;
-  }
-}
+    max-width: 150px;
+  } 
+}*/
 
 .video {
   display: flex;
   flex-direction: column;
   background-image: url("./photoshop/design-assets/bgk-middle.png");
+  background-size: cover;
   background-repeat: no-repeat;
   margin: auto;
-  width: 1200px;
-  justify-content: center;
-  align-items: center;
-}
-
-.video .play-btn-container,
-.video-text {
-  padding-bottom: 5rem;
-}
-
-.play-btn-container {
-  display: flex;
   justify-content: center;
   align-items: center;
   height: 550px;
+  max-width: 1200px;
 }
 
-.play-btn-container img {
+.play-btn-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,14 +38,12 @@
 
 .video-text {
   text-align: center;
-  position: absolute;
-  margin-top: 12rem;
-  width: 230px;
   color: #fff;
-  /* border: 2px solid orange; */
-  font-family: sans-serif;
   font-weight: bolder;
   letter-spacing: 0.02rem;
   font-size: 20px;
   text-transform: uppercase;
+  margin-top: 2rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
