--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ body {
   color: rgb(17, 225, 249);
   border: 1px solid;
   background-color: transparent;
-  margin: 2rem;
+  margin: 2rem 1rem;
   display: inline-block;
   text-decoration: none;
 }
@@ -237,7 +237,7 @@ body {
 
 .team-members {
   border: 1px solid rgb(186, 178, 178);
-  width: 200px;
+  max-width: 200px;
   height: 300px;
 }
 .team-members p {
@@ -342,13 +342,14 @@ body {
 
 .subscribe {
   display: flex;
-  gap: 1rem;
+  gap: 0.5em;
   justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 #subscribe-input {
   background-color: transparent;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 1.3rem;
   border: 1px solid rgb(190, 182, 182);
   color: white;
 }
@@ -356,7 +357,7 @@ body {
 #subscribe-button {
   background-color: rgb(190, 182, 182);
   border: 1px solid rgb(190, 182, 182);
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 1.3rem;
 }
 #subscribe-button:hover {
   border: 1px solid black;
@@ -382,7 +383,7 @@ body {
 @media only screen and (max-width: 600px) {
   .footer {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 0.2fr 0.1fr;
+    grid-template-rows: 1.2fr 1fr 1.2fr 0.2fr 0.2fr;
     grid-template-areas:
       "logo"
       "studio"
@@ -393,5 +394,19 @@ body {
 
 }
 
+@media only screen and (max-width: 300px) {
+  .subscribe{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #subscribe-input {
+    padding: 0.5rem 1rem;
+  }
+  .foot-nav-list {
+    justify-content: center;
+    gap: 0.3rem;
+  }
 }
+
 
