--- a/nav-hero.css
+++ b/nav-hero.css
@@ -1,19 +1,35 @@
 /*Nav Css files start*/
 
+/*Mobile media query start*/
+@media only screen and (max-width: 469) and (min-width: 320px) {
+  .hero-text-container,
+  .hero-h1 .hero-text {
+    text-align: center;
+    color: #fff;
+    display: flex;
+    border: 1px solid pink;
+    margin-bottom: 15rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .nav-right {
+    padding-right: 3rem;
+  }
+
+  .nav-container {
+    padding-right: 3rem;
+  }
+}
+/*Mobile media query end*/
+
+/*Desktop media query start*/
 .hero {
   background-image: url("./photoshop/design-assets/bgk-header.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   margin: 0 auto;
-  height: 750px;
   max-width: 1200px;
-}
-
-.hero-text-container {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
 }
 
 .hero-text-container,
@@ -26,7 +42,6 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid pink; */
 }
 
 .hero .hero-btn {
@@ -49,12 +64,6 @@
 .nav-container {
   display: flex;
   justify-content: space-between;
-  /* border: 1px solid blue; */
-  flex-direction: row;
-}
-
-.nav-right {
-  margin-right: 4rem;
 }
 
 .nav-left {
@@ -80,6 +89,8 @@
   justify-content: right;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  flex-wrap: wrap;
+  margin-right: 4rem;
 }
 
 .navbar a {
@@ -126,5 +137,6 @@
   border: none;
   margin: auto;
 }
+/*Desktop media query end*/
 
 /*Nav Css files end*/
